微信版改动
Signed-off-by: iRuxu <17229398@qq.com>

--- a/css/module/common/i-footer/all.less
+++ b/css/module/common/i-footer/all.less
@@ -12,7 +12,7 @@
 
 	li{
 		.fl;
-		.size(20%,100%);
+		.size(25%,100%);
 	}
 
 	a{
@@ -48,6 +48,7 @@
 		    margin-top: 1px;
 		}
 		span{.none;}
+		.none;
 	}
 	.u-search{
 		i{background-image:url('@{url}footer/search.svg');}
