--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -13,106 +13,108 @@
 			</div>
 		</div>
 
-		<div class="m-sitemap-block m-sitemap-channel">
-			<h2>网站栏目</h2>
+		<div class="m-sitemap-compass">
 			<ul>
-				<li><a href="./"><i class="u-index"></i><span>首页</span></a></li>
-				<li><a href="./macro"><i class="u-macro"></i><span>宏库</span></a></li>
-				<li><a href="./tool"><i class="u-tool"></i><span>工具</span></a></li>
-				<li><a href="./app"><i class="u-app"></i><span>应用</span></a></li>
-				<li><a href="./skin"><i class="u-skin"></i><span>皮肤</span></a></li>
+				<li><a class="" href="./bbs"><i class="u-bbs"></i><span>交流</span></a></li>
+				<li><a href="https://www.j3pz.com/m/"><i class="u-peizhuang"></i><span>配装模拟</span></a></li>
+				<li><a href="./app/servers"><i class="u-servers"></i><span>开服监控</span></a></li>
+				<li><a href="https://www.j3pz.com/m/tools.html"><i class="u-speed"></i><span>加速宝典</span></a></li>
+				<li><a href="http://www.j3ui.com/wiki"><i class="u-chengjiu"></i><span>成就百科</span></a></li>
+				<li><a class="" href="./macro"><i class="u-macro"></i><span>宏库</span></a></li>
 				<li><a href="./role"><i class="u-role"></i><span>职业</span></a></li>
 				<li><a href="./fam"><i class="u-fam"></i><span>副本</span></a></li>
-				<li><a href="./face"><i class="u-face"></i><span>捏脸</span></a></li>
+				<li><a href="./fb"><i class="u-fb"></i><span>副本专题</span></a></li>
+				<li><a href="./tool"><i class="u-tool"></i><span>工具</span></a></li>
+
+				<li><a href="./pet"><i class="u-pet"></i><span>宠物</span></a></li>
 				<!-- <li><a href="./wall"><i class="u-wall"></i><span>壁纸</span></a></li> -->
-				<li><a href="./raid"><i class="u-raid"></i><span>团队</span></a></li>
-				<li><a href="./biz"><i class="u-biz"></i><span>交易</span></a></li>
+
+				<li><a href="./team"><i class="u-team"></i><span>团队招募</span></a></li>
+				<li><a href="./member"><i class="u-member"></i><span>团员求团</span></a></li>
+				<li><a href="./biz-sale"><i class="u-biz-sale"></i><span>出售信息</span></a></li>
+				<li><a href="./biz-buy"><i class="u-biz-buy"></i><span>求购信息</span></a></li>
+
+				<li><a href="./skin"><i class="u-skin"></i><span>读条皮肤</span></a></li>
+				<li><a href="./face"><i class="u-face"></i><span>捏脸数据</span></a></li>
 				<li><a href="./story"><i class="u-story"></i><span>回忆录</span></a></li>
-				<li><a href="./bbs"><i class="u-bbs"></i><span>讨论区</span></a></li>
-				<li><a href="./ow"><i class="u-ow"></i><span>竞技</span></a></li>
-				<li><a href="./wiki"><i class="u-wiki"></i><span>百科</span></a></li>
+				<li><a href="./ow"><i class="u-ow"></i><span>守望屁股</span></a></li>
 			</ul>
 		</div>
 
-		<div class="m-sitemap-block m-sitemap-zt">
-			<h2>专题专辑</h2>
-			<ul>
-				<li><a href="./fb">副本专题<em>(PC版)</em></a></li>
-			</ul>
+		<div class="m-sitemap-more">
+			<div class="m-sitemap-block m-sitemap-about">
+				<h2>下架栏目</h2>
+				<ul>
+					<li><a href="./cloud">超级宏官网<em>(已和谐)</em></a></li>
+					<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<em>(已和谐)</em></a></li>
+					<li><a href="./group.php">群组<em>(私版)</em></a></li>
+				</ul>
+			</div>
+
+			<div class="m-sitemap-block m-sitemap-member">
+				<h2>账号系统</h2>
+				<ul>
+					<li><a href="./login">登录</a></li>
+					<li><a href="./register">注册</a></li>
+					<li><a href="./misc.php?mod=buyinvitecode">邀请码</a></li>
+					<li><a href="./member.php?mod=logging&action=login">找回密码</a></li>
+				</ul>
+			</div>
+
+			<div class="m-sitemap-block m-sitemap-user">
+				<h2>用户系统</h2>
+				<ul>
+					<li><a href="./home.php?mod=space&do=pm">消息</a></li>
+					<li><a href="./home.php?mod=spacecp&ac=credit&op=log">积分</a></li>
+					<li><a href="./home.php?mod=spacecp&ac=profile&op=password">资料</a></li>
+					<li><a href="./forum.php?mod=guide&view=my&type=thread">帖子</a></li>
+					<li><a href="./home.php?mod=space&do=blog">空间</a></li>
+					<li><a href="./home.php?mod=task">扩展</a></li>
+					<li><a href="./home.php?mod=spacecp&ac=sendmail">设置</a></li>
+					<li><a href="./home.php?mod=spacecp&ac=promotion">其它</a></li>
+				</ul>
+			</div>
+
+			<div class="m-sitemap-block m-sitemap-help">
+				<h2>帮助系统</h2>
+				<ul>
+					<li><a href="./faq">FAQ</a></li>
+					<li><a href="./feedback">反馈中心</a></li>
+					<li><a href="./push">推送头条</a></li>
+				</ul>
+			</div>
+
+			<div class="m-sitemap-block m-sitemap-system">
+				<h2>网站系统</h2>
+				<ul>
+					<li><a href="./sitemap">站点地图</a></li>
+					<li><a href="./news/">历史头条</a></li>
+				</ul>
+				<ul>
+					<li><a href="http://search.jx3pve.com/cse/search?s=16227720870024914123&entry=1&q=" target="_blank">搜索系统</a></li>
+					<li><a href="./system/404.html" target="_blank">404错误引导</a></li>
+					<li><a href="./misc.php?mod=stat"  target="_blank">站点统计<em>(PC版)</em></a></li>
+					<li><a href="./archiver"  target="_blank">Archiver<em>(PC版)</em></a></li>
+				</ul>
+			</div>
+
+			<div class="m-sitemap-block m-sitemap-about">
+				<h2>关于我们</h2>
+				<ul>
+					<li><a href="./portal.php?mod=topic&topicid=116">网站简介</a></li>
+					<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24">更新日志</a></li>
+					<li><a href="./portal.php?mod=topic&topicid=113">版权声明</a></li>
+					<li><a href="./portal.php?mod=topic&topicid=114">免责声明</a></li>
+					<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=25">管理团队</a></li>
+					<li><a href="./portal.php?mod=topic&topicid=64">签约作者</a></li>
+					<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=26">加入我们</a></li>
+					<li><a href="./portal.php?mod=topic&topicid=115">友情链接</a></li>
+					<li><a href="./portal.php?mod=topic&topicid=65">合作联系</a></li>
+				</ul>
+			</div>
 		</div>
 
-		<div class="m-sitemap-block m-sitemap-old">
-			<h2>停更栏目</h2>
-			<ul>
-				<li><a href="./pet">宠物<em>(PC版)</em></a></li>
-				<li><a href="./cloud">超级宏官网<em>(已和谐)</em></a></li>
-				<li><a href="./forum.php?mod=forumdisplay&fid=85">超级宏论坛<em>(已和谐)</em></a></li>
-				<li><a href="./group.php">群组<em>(私版)</em></a></li>
-				<li><a href="./video">视频<em>(已移除)</em></a></li>
-			</ul>
-		</div>
-
-		<div class="m-sitemap-block m-sitemap-member">
-			<h2>账号系统</h2>
-			<ul>
-				<li><a href="./login">登录</a></li>
-				<li><a href="./register">注册</a></li>
-				<li><a href="./misc.php?mod=buyinvitecode">邀请码</a></li>
-				<li><a href="./member.php?mod=logging&action=login">找回密码</a></li>
-			</ul>
-		</div>
-
-		<div class="m-sitemap-block m-sitemap-user">
-			<h2>用户系统</h2>
-			<ul>
-				<li><a href="./home.php?mod=space&do=pm">消息</a></li>
-				<li><a href="./home.php?mod=spacecp&ac=credit&op=log">积分</a></li>
-				<li><a href="./home.php?mod=spacecp&ac=profile&op=password">资料</a></li>
-				<li><a href="./forum.php?mod=guide&view=my&type=thread">帖子</a></li>
-				<li><a href="./home.php?mod=space&do=blog">空间</a></li>
-				<li><a href="./home.php?mod=task">扩展</a></li>
-				<li><a href="./home.php?mod=spacecp&ac=sendmail">设置</a></li>
-				<li><a href="./home.php?mod=spacecp&ac=promotion">其它</a></li>
-			</ul>
-		</div>
-
-		<div class="m-sitemap-block m-sitemap-help">
-			<h2>帮助系统</h2>
-			<ul>
-				<li><a href="./faq">FAQ</a></li>
-				<li><a href="./feedback">反馈中心</a></li>
-				<li><a href="./push">推送头条</a></li>
-			</ul>
-		</div>
-
-		<div class="m-sitemap-block m-sitemap-system">
-			<h2>网站系统</h2>
-			<ul>
-				<li><a href="./sitemap">站点地图</a></li>
-				<li><a href="./news/">历史头条</a></li>
-			</ul>
-			<ul>
-				<li><a href="http://search.jx3pve.com/cse/search?s=16227720870024914123&entry=1&q=" target="_blank">搜索系统</a></li>
-				<li><a href="./system/404.html" target="_blank">404错误引导</a></li>
-				<li><a href="./misc.php?mod=stat"  target="_blank">站点统计<em>(PC版)</em></a></li>
-				<li><a href="./archiver"  target="_blank">Archiver<em>(PC版)</em></a></li>
-			</ul>
-		</div>
-
-		<div class="m-sitemap-block m-sitemap-about">
-			<h2>关于我们</h2>
-			<ul>
-				<li><a href="./portal.php?mod=topic&topicid=116">网站简介</a></li>
-				<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=24">更新日志</a></li>
-				<li><a href="./portal.php?mod=topic&topicid=113">版权声明</a></li>
-				<li><a href="./portal.php?mod=topic&topicid=114">免责声明</a></li>
-				<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=25">管理团队</a></li>
-				<li><a href="./portal.php?mod=topic&topicid=64">签约作者</a></li>
-				<li><a href="./forum.php?mod=forumdisplay&fid=392&filter=sortid&sortid=26">加入我们</a></li>
-				<li><a href="./portal.php?mod=topic&topicid=115">友情链接</a></li>
-				<li><a href="./portal.php?mod=topic&topicid=65">合作联系</a></li>
-			</ul>
-		</div>
+		
 	</div>
 </div>
 <script src="http://js.jx3pve.com/js/page/page-sitemap.min.js"></script>
