--- a/css/system/faq.css
+++ b/css/system/faq.css
@@ -1,1 +1,279 @@
-.u-text{padding:0;margin:0;line-height:inherit;height:auto;appearance:none;border:1px solid #ddd;box-shadow:0 0 1px #ddd inset;border-radius:2px;background:#fff;-webkit-transition:.2s ease-in-out;transition:.2s ease-in-out}.u-text:focus{box-shadow:0 0 3px #8dace6;border-color:#0d6eb8}.ct2_a .mn{margin-right:0}.faq-container{min-height:400px}.ua-responsive .screen-s .faq-container{min-height:auto}.faq-container .wp{position:relative;*zoom:1}.m-faq-sidebar{width:120px;padding:5px 10px;position:absolute;left:0;top:0}.m-faq-content{margin-left:140px;width:auto !important;float:none !important;display:block !important}.ua-responsive .screen-s .m-faq-content{margin-left:0 !important}.m-faq-search{position:absolute;right:0;top:5px;z-index:2}.m-faq-search .mtn{margin-top:0 !important}.m-faq-search .u-text-wp{display:block;float:left;*display:inline;width:180px;margin-top:1px;font-size:13px;line-height:26px;height:26px;margin-right:5px;overflow:visible;border:1px solid #ddd;border-radius:3px}.m-faq-search .u-text{padding:0 10px;background:none;border:none;box-sizing:border-box;width:100%;height:100%}.m-faq-search .u-button{float:left;*display:inline;width:80px;height:28px;font-size:13px;line-height:28px}.ua-responsive .screen-s .m-faq-search{position:absolute;left:0;top:-30px;width:100%;padding:0 20px;box-sizing:border-box}.ua-responsive .screen-s .m-faq-search form{width:100%}.ua-responsive .screen-s .m-faq-search .u-button{position:absolute;right:20px;top:0}.ua-responsive .screen-s .m-faq-search .u-text-wp{float:none;margin-right:85px;width:auto}.m-faq-main{border:none;background:none}.ua-responsive .screen-s .m-faq-main{margin-top:40px}.m-faq-sidebar h2{display:none}.m-faq-sidebar li{color:#777;margin-bottom:5px}.m-faq-sidebar a{position:relative;*zoom:1;font-size:13px;line-height:40px;padding-left:20px;display:block}.m-faq-sidebar a:before{content:'';display:block;position:absolute;left:0;top:13px;width:15px;height:15px;background:url('http://img.jx3pve.com/img/header/icons2.png') no-repeat -215px -4px}.m-faq-sidebar li a:hover,.m-faq-sidebar li.a a{color:#259}.m-faq-sidebar li a:hover:before,.m-faq-sidebar li.a a:before{background-position:-215px -24px}.m-faq-sidebar li.a a{font-weight:bold}.ua-responsive .screen-s .m-faq-sidebar{display:none;position:fixed;left:0;top:45px;z-index:40;width:100%;background-color:#fff;padding:10px 30px 20px 30px;border-bottom:1px solid #ddd;box-sizing:border-box}.pg_faq .i-header{z-index:40}.alertHTML.ua-responsive .screen-s .m-faq-sidebar{top:75px}.m-faq-content h1{background-color:#f2f2f2;border-radius:24px;padding:0 10px}.m-faq-content .m-faq-cattitle{font-weight:bold;border-bottom:1px dotted #ddd}.m-faq-content .m-faq-cattitle a{color:#259}.m-faq-content .m-faq-list{border-bottom:none;margin-bottom:10px}.m-faq-content .m-faq-list li{line-height:20px;list-style:square}.m-faq-content .umh h3{font-size:13px;color:#259;font-weight:bold}.m-faq-content .umh.umn h3{color:#555;font-weight:normal}.m-faq-content .umn{background-position:0 center}.m-faq-content .umh h3{background-position:right 8px}.m-faq-content .umh.umn h3{background-position:right -32px}.m-faq-content .umh_act{font-size:12px;line-height:26px}.m-faq-content .um{border:1px dotted #ddd;padding:10px;background:#f7f7f7}.m-faq-content .um a{color:#259}.m-faq-content .um a:hover{color:#259}.m-faq-content .um a:hover{text-decoration:underline}.m-faq-content .um b{font-weight:bold}.m-faq-content .um strong{color:#c00;font-weight:bold}.m-faq-content .um img{max-width:100%;display:block;padding:5px;border:1px solid #ddd;background-color:#fff}.m-faq-content .um table{max-width:100%;margin:5px auto}.m-faq-content .um table td{padding:2px 5px;border:1px solid #ddd}.m-faq-content .um code{font-family:Consolas,'微软雅黑';font-size:12px;line-height:2;display:block;background-color:#fff;border:1px solid #ddd;border-radius:3px;margin:5px 0;padding:5px}.m-faq-details{line-height:2.4}.m-faq-help{border-top:1px dashed #999;text-align:right;margin-top:5px;padding-top:5px;font-size:12px;line-height:24px}
+/*
+ * Name: base.less v3.1
+ * Description: function,ie hack
+ * Creator: iRuxu,Dora
+ * Modify: iRuxu
+ * Update: 2015-8-13
+ * API: http://help.lab.hunantv.com/page/function/base.html
+ */
+.u-text {
+  padding: 0;
+  margin: 0;
+  line-height: inherit;
+  height: auto;
+  appearance: none;
+  border: 1px solid #ddd;
+  box-shadow: 0 0 1px #ddd inset;
+  border-radius: 2px;
+  background: #fff;
+  transition: 0.2s ease-in-out;
+}
+.u-text:focus {
+  box-shadow: 0 0 3px #8DACE6;
+  border-color: #0D6EB8;
+}
+.ct2_a .mn {
+  margin-right: 0;
+}
+.faq-container {
+  min-height: 400px;
+}
+.ua-responsive .screen-s .faq-container {
+  min-height: auto;
+}
+.faq-container .wp {
+  position: relative;
+  *zoom: 1;
+}
+.m-faq-sidebar {
+  width: 120px;
+  padding: 5px 10px;
+  position: absolute;
+  left: 0;
+  top: 0;
+}
+.m-faq-content {
+  margin-left: 140px;
+  width: auto !important;
+  float: none  !important;
+  display: block !important;
+}
+.ua-responsive .screen-s .m-faq-content {
+  margin-left: 0 !important;
+}
+.m-faq-search {
+  position: absolute;
+  right: 0;
+  top: 5px;
+  z-index: 2;
+}
+.m-faq-search .mtn {
+  margin-top: 0 !important;
+}
+.m-faq-search .u-text-wp {
+  display: block;
+  float: left;
+  *display: inline;
+  width: 180px;
+  margin-top: 1px;
+  font-size: 13px;
+  line-height: 26px;
+  height: 26px;
+  margin-right: 5px;
+  overflow: visible;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+}
+.m-faq-search .u-text {
+  padding: 0 10px;
+  background: none;
+  border: none;
+  box-sizing: border-box;
+  width: 100%;
+  height: 100%;
+}
+.m-faq-search .u-button {
+  float: left;
+  *display: inline;
+  width: 80px;
+  height: 28px;
+  font-size: 13px;
+  line-height: 28px;
+}
+.ua-responsive .screen-s .m-faq-search {
+  position: absolute;
+  left: 0;
+  top: -30px;
+  width: 100%;
+  padding: 0 20px;
+  box-sizing: border-box;
+}
+.ua-responsive .screen-s .m-faq-search form {
+  width: 100%;
+}
+.ua-responsive .screen-s .m-faq-search .u-button {
+  position: absolute;
+  right: 20px;
+  top: 0;
+}
+.ua-responsive .screen-s .m-faq-search .u-text-wp {
+  float: none;
+  margin-right: 85px;
+  width: auto;
+}
+.m-faq-main {
+  border: none;
+  background: none;
+}
+.ua-responsive .screen-s .m-faq-main {
+  margin-top: 40px;
+}
+.m-faq-sidebar h2 {
+  display: none;
+}
+.m-faq-sidebar li {
+  color: #777;
+  margin-bottom: 5px;
+}
+.m-faq-sidebar a {
+  position: relative;
+  *zoom: 1;
+  font-size: 13px;
+  line-height: 40px;
+  padding-left: 20px;
+  display: block;
+}
+.m-faq-sidebar a:before {
+  content: '';
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 13px;
+  width: 15px;
+  height: 15px;
+  background: url('http://img.jx3pve.com/img/header/icons2.png') no-repeat -215px -4px;
+}
+.m-faq-sidebar li a:hover,
+.m-faq-sidebar li.a a {
+  color: #225599;
+}
+.m-faq-sidebar li a:hover:before,
+.m-faq-sidebar li.a a:before {
+  background-position: -215px -24px;
+}
+.m-faq-sidebar li.a a {
+  font-weight: bold;
+}
+.ua-responsive .screen-s .m-faq-sidebar {
+  display: none;
+  position: fixed;
+  left: 0;
+  top: 45px;
+  z-index: 40;
+  width: 100%;
+  background-color: #fff;
+  padding: 10px 30px 20px 30px;
+  border-bottom: 1px solid #ddd;
+  box-sizing: border-box;
+}
+.pg_faq .i-header {
+  z-index: 40;
+}
+.alertHTML.ua-responsive .screen-s .m-faq-sidebar {
+  top: 75px;
+}
+.m-faq-content {
+  /*.pr;overflow:visible;
+
+	.bm .pns{.pa;top:-43px;right:0;.z(2);}*/
+}
+.m-faq-content h1 {
+  background-color: #f2f2f2;
+  border-radius: 24px;
+  padding: 0 10px;
+}
+.m-faq-content .m-faq-cattitle {
+  font-weight: bold;
+  border-bottom: 1px dotted #ddd;
+}
+.m-faq-content .m-faq-cattitle a {
+  color: #225599;
+}
+.m-faq-content .m-faq-list {
+  border-bottom: none;
+  margin-bottom: 10px;
+}
+.m-faq-content .m-faq-list li {
+  line-height: 20px;
+  list-style: square;
+}
+.m-faq-content .umh h3 {
+  font-size: 13px;
+  color: #225599;
+  font-weight: bold;
+}
+.m-faq-content .umh.umn h3 {
+  color: #555;
+  font-weight: normal;
+}
+.m-faq-content .umn {
+  background-position: 0 center;
+}
+.m-faq-content .umh h3 {
+  background-position: right 8px;
+}
+.m-faq-content .umh.umn h3 {
+  background-position: right -32px;
+}
+.m-faq-content .umh_act {
+  font-size: 12px;
+  line-height: 26px;
+}
+.m-faq-content .um {
+  border: 1px dotted #ddd;
+  padding: 10px;
+  background: #f7f7f7;
+}
+.m-faq-content .um a {
+  color: #225599;
+}
+.m-faq-content .um a:hover {
+  color: #225599;
+}
+.m-faq-content .um a:hover {
+  text-decoration: underline;
+}
+.m-faq-content .um b {
+  font-weight: bold;
+}
+.m-faq-content .um strong {
+  color: #cc0000;
+  font-weight: bold;
+}
+.m-faq-content .um img {
+  max-width: 100%;
+  display: block;
+  padding: 5px;
+  border: 1px solid #ddd;
+  background-color: #fff;
+}
+.m-faq-content .um table {
+  max-width: 100%;
+  margin: 5px auto;
+}
+.m-faq-content .um table td {
+  padding: 2px 5px;
+  border: 1px solid #ddd;
+}
+.m-faq-content .um code {
+  font-family: Consolas, '微软雅黑';
+  font-size: 12px;
+  line-height: 2;
+  display: block;
+  background-color: #fff;
+  border: 1px solid #ddd;
+  border-radius: 3px;
+  margin: 5px 0;
+  padding: 5px;
+}
+.m-faq-details {
+  line-height: 2.4;
+}
+.m-faq-help {
+  border-top: 1px dashed #999;
+  text-align: right;
+  margin-top: 5px;
+  padding-top: 5px;
+  font-size: 12px;
+  line-height: 24px;
+}
