Signed-off-by: unknown <17229398@qq.com>

--- a/template/about/portal/portal_topic_sitemap.htm
+++ b/template/about/portal/portal_topic_sitemap.htm
@@ -16,26 +16,25 @@
 		<div class="m-sitemap-compass">
 			<ul>
 				<li><a class="" href="./bbs"><i class="u-bbs"></i><span>交流</span><em></em></a></li>
-				<li><a href="https://www.j3pz.com/m/"><i class="u-peizhuang"></i><span>配装模拟</span><em></em></a></li>
-				<li><a href="./app/servers"><i class="u-servers"></i><span>开服监控</span><em></em></a></li>
-				<li><a href="https://www.j3pz.com/m/tools.html"><i class="u-speed"></i><span>加速宝典</span><em></em></a></li>
-				<li><a href="http://www.j3ui.com/wiki"><i class="u-chengjiu"></i><span>成就百科</span><em></em></a></li>
 				<li><a class="" href="./macro"><i class="u-macro"></i><span>宏库</span><em class="u-mark-hot"></em></a></li>
 				<li><a href="./role"><i class="u-role"></i><span>职业</span><em></em></a></li>
 				<li><a href="./fam"><i class="u-fam"></i><span>副本</span><em class="u-mark-hot"></em></a></li>
 				<li><a href="./fb"><i class="u-fb"></i><span>副本专题</span><em></em></a></li>
 				<li><a href="./tool"><i class="u-tool"></i><span>工具</span><em></em></a></li>
-
+				<li><a href="https://www.j3pz.com/m/"><i class="u-peizhuang"></i><span>配装模拟</span><em></em></a></li>
+				<li><a href="./app/servers"><i class="u-servers"></i><span>开服监控</span><em></em></a></li>
+				<li><a href="https://www.j3pz.com/m/tools.html"><i class="u-speed"></i><span>加速宝典</span><em></em></a></li>
+				<!-- <li><a href="./pvx"><i class="u-pvx"></i><span>休闲攻略</span><em></em></a></li> -->
+				<li><a href="http://www.j3ui.com/wiki"><i class="u-chengjiu"></i><span>成就百科</span><em></em></a></li>
 				<li><a href="./pet"><i class="u-pet"></i><span>宠物</span><em></em></a></li>
-				<!-- <li><a href="./wall"><i class="u-wall"></i><span>壁纸</span><em></em></a></li> -->
-
 				<li><a href="./team"><i class="u-team"></i><span>团队招募</span><em></em></a></li>
 				<li><a href="./member"><i class="u-member"></i><span>团员求团</span><em></em></a></li>
 				<li><a href="./biz-sale"><i class="u-biz-sale"></i><span>出售信息</span><em></em></a></li>
 				<li><a href="./biz-buy"><i class="u-biz-buy"></i><span>求购信息</span><em></em></a></li>
-
-				<li><a href="./skin"><i class="u-skin"></i><span>读条皮肤</span><em></em></a></li>
+				<!-- <li><a href="./wall"><i class="u-wall"></i><span>壁纸</span><em></em></a></li> -->
+				<!-- <li><a href="./music"><i class="u-music"></i><span>音乐</span><em></em></a></li> -->
 				<li><a href="./face"><i class="u-face"></i><span>捏脸数据</span><em></em></a></li>
+				<li><a href="./skin"><i class="u-skin"></i><span>读条皮肤</span><em></em></a></li>
 				<li><a href="./story"><i class="u-story"></i><span>回忆录</span><em></em></a></li>
 				<li><a href="./ow"><i class="u-ow"></i><span>守望屁股</span><em class="u-mark-new"></em></a></li>
 			</ul>
