--- a/css/module/common/c-header/ipad.less
+++ b/css/module/common/c-header/ipad.less
@@ -1,11 +1,11 @@
 //平板竖屏
 .ua-responsive .screen-m{
-	.c-header-search{
+	/*.c-header-search{
 		.w(280px);
-	}
-	.c-header-menu{
+	}*/
+	/*.c-header-menu{
 		.none;
-	}
+	}*/
 	.c-header .wp{
 		padding-right:0;
 	}
