--- a/css/module/common/c-header/menu.less
+++ b/css/module/common/c-header/menu.less
@@ -1,5 +1,5 @@
 .c-header-menu{
-	.fl;
+	.fl;margin-left:20px;
 	li{
 		.fl;
 		&.on{
@@ -16,10 +16,16 @@
 	    line-height: 45px;
 	    text-align: center;
 	    display: block;
-	    color: #eee;
+	    color: #f2f4f5;
 	    text-shadow: 0 1px 1px rgba(0,0,0,.12);
 	    font-size: 14px;
 	    padding:0 12px;
 	    &:hover{color:@blue-light;}
+	}
+	.u-more{
+
+	}
+	#c-header-menu-fid{
+		.none;
 	}
 }
