--- a/css/module/common/c-header/search.less
+++ b/css/module/common/c-header/search.less
@@ -1,9 +1,12 @@
 .c-header-search{
-	.fl;margin-right:18px;
+	.fr;margin-left:10px;
+    //.fl;margin-right:18px;
+
 	margin-top:7px;
 	.pr;
 	.h(33px);
-    .w(380px);
+    //.w(380px);
+    .w(200px);
     .clip;
 }
 
