--- a/template/default/common/panel.htm
+++ b/template/default/common/panel.htm
@@ -47,6 +47,18 @@
 				<a class="c-header-logo" href="http://www.jx3pve.com">
 					JX3PVE
 				</a>
+
+				<ul class="c-header-menu">
+					<!--{loop $_G['setting']['topnavs'][0] $nav}-->
+						<!--{if $nav['available'] && (!$nav['level'] || ($nav['level'] == 1 && $_G['uid']) || ($nav['level'] == 2 && $_G['adminid'] > 0) || ($nav['level'] == 3 && $_G['adminid'] == 1))}--><li>$nav[code]</li><!--{/if}-->
+					<!--{/loop}-->
+					<li class="u-more"><a id="c-header-menu-moretg" href="javascript:;">更多</a></li>
+				</ul>
+
+				<div class="c-header-user">
+					<!--{template common/header_userstatus}-->
+				</div>
+
 				<div class="c-header-search">
 					<div id="bdcs">
 						<div class="bdcs-container">
@@ -63,21 +75,9 @@
 					</div>
 				</div>
 
-				<ul class="c-header-menu">
-					<!--{loop $_G['setting']['topnavs'][0] $nav}-->
-						<!--{if $nav['available'] && (!$nav['level'] || ($nav['level'] == 1 && $_G['uid']) || ($nav['level'] == 2 && $_G['adminid'] > 0) || ($nav['level'] == 3 && $_G['adminid'] == 1))}--><li>$nav[code]</li><!--{/if}-->
-					<!--{/loop}-->
-				</ul>
-				
-				<div class="c-header-user">
-					<!--{template common/header_userstatus}-->
-				</div>
-
 				<!--{if $_G['uid']}-->
 				<!--{hook/global_usernav_extra2}-->
 				<!--{/if}-->
-
-				<a class="c-header-ask" href="http://www.jx3pve.com/forum.php?mod=post&action=newthread&fid=2">提问</a>
 			</div>
 		</div>
 
