栏目类型面包屑调整优化
Signed-off-by: iRuxu <17229398@qq.com>

--- a/css/index/index-v7/content.less
+++ b/css/index/index-v7/content.less
@@ -73,7 +73,7 @@
 
 		.u-add{
 			.pa;.rb(0,8px);
-			.color(#999,#259);
+			.color(#999,@blue-link);
 			.normal;font-size:12px;
 			i{
 				background:url('@{url}icon/app_add.gif') no-repeat 0 0;
