--- a/css/index/index-v7/layout.less
+++ b/css/index/index-v7/layout.less
@@ -1,5 +1,5 @@
 .index-container{
-	padding:20px 0;
+	padding:0 0 20px 0;
 	.clearfix;
 }
 
@@ -16,7 +16,7 @@
 .m-index-title{
 	.u-title{
 		.db;
-		.color(#444,#259);
+		.color(#444,@blue-link);
 		line-height:36px;
 		padding-left:10px;
 		border-bottom:1px solid #eee;
@@ -33,4 +33,6 @@
 	}
 }
 
-#pt{margin-bottom:10px;margin-top:0;}
+#pt{
+	margin-bottom:10px;
+}
