--- a/css/index/index-v7/sidebar.less
+++ b/css/index/index-v7/sidebar.less
@@ -4,7 +4,7 @@
 	.r(3px);
 	margin-bottom:20px;
 	a{.db;.x;}
-	.u-title{.fz(16px);.color(#259,#c00);}
+	.u-title{.fz(16px);.color(@blue-link,#c00);}
 	.u-desc{.color(#666,#c00);}
 	background-color:#eff6fa;
 	&:hover{background-color:#eff6fa;}
@@ -20,7 +20,7 @@
 	}
 	a{
 		.db;
-		.color(#444,#259);
+		.color(#444,@blue-link);
 		line-height:36px;
 		padding-left:10px;
 		border-bottom:1px solid #eee;
@@ -59,7 +59,7 @@
 		margin-bottom:5px;
 		a{
 			.db;
-			.color(#444,#259);
+			.color(#444,@blue-link);
 			line-height:36px;
 			padding-left:10px;
 			border-bottom:1px solid #eee;
@@ -87,7 +87,7 @@
 			padding-left:20px;
 			.db;.nobreak;
 			line-height:30px;
-			.color(#666,#259);
+			.color(#666,@blue-link);
 			background: url('@{url}index/arrow.png') no-repeat 5px center;
 		}
 		em{color:#ccc;.fr;.none;}
@@ -99,5 +99,5 @@
 	background:#fafafa;
 	padding:20px 0;
 	.u-img{.db;.auto(x);}
-	b{/*.color(#259);*/.bold;}
+	b{/*.color(@blue-link);*/.bold;}
 }
