--- a/css/module/forum/layout.less
+++ b/css/module/forum/layout.less
@@ -1,6 +1,6 @@
 .listpage-container,.viewpage-container,.postpage-container{
 	//background-color:#f7f7f7;
-	padding-top:2px;
+	//padding-top:2px;
 }
 
 .default-main{
