--- a/css/module/widget/w-adminbar.less
+++ b/css/module/widget/w-adminbar.less
@@ -1,4 +1,11 @@
 .w-adminbar{
+	background-color:#eff6fa;
+	.color(#999,@blue-link,#c00);
+	padding:2px 10px !important;
+	.r(4px);
+	margin-bottom:10px;
+}
+.w-adminbar{
 	.none;
 }
 .adminHTML .w-adminbar{
