--- a/css/module/widget/w-custom.less
+++ b/css/module/widget/w-custom.less
@@ -3,7 +3,7 @@
 	.pa;.rt(0,0);
 	line-height:29px;
 	padding:5px 15px 3px 20px;
-	.color(#555,#555,#222);
+	.color(#555,#555,@blue-link);
 }
 
 .adminHTML .w-custom{
@@ -15,7 +15,6 @@
 	.none;
 	
 }
-
 
 .w-custom-zoom,.w-custom-feed,.w-custom-my,.w-custom-fav{
 	.fl;margin-left:15px;
